<resources>

    <string name="app_name">Zboží.cz</string>
    <string name="title_offer_detail">Detail nabídky</string>
    <string name="title_offer_list">Nabídky</string>
    <string name="title_product_list">Výsledky</string>
    <string name="title_product_detail">Detail produktu</string>
    <string name="search_button">Vyhledat</string>    
	<string name="sort_up">Od nejdražšího</string>
	<string name="sort_down">Od nejlevnějšího</string>
    <string name="currency">Kč</string>
    <string name="productOverview_image">Náhled obrázku</string>
    <string name="productRow_image">Náhled obrázku</string>
    <string name="not_online">Pro tuto akci je nutné připojení k internetu.</string>
    <string name="no_results">Nebyly nalezeny žádné položky.</string>
        
    <string name="availability_immediately">Zboží je skladem</string>  
    <string name="availability_in_week">Do týdne</string>  
    <string name="availability_all">Více než týden</string>  
    <string name="availability_default">Neznámá</string>  
    <string name="no_input">Nejprve vložte hledaný řetězec.</string>
    <string name="connection_problem">Omlouváme se, ale při komunikaci se serverem došlo k chybě. Zkontrolujte připojení k internetu a opakujte akci později.</string>
           
    <string name="search_label">Vyhledávání</string>   
    <string name="search_hint">Vyhledat&#8230;</string>      
    <string name="settings_description">Vyhledávání zboží</string>
    
    <string name="product_detail_price_from">Od </string>
    <string name="product_detail_price_to"> do </string>
    <string name="product_detail_blank">Není vybrán žádný produkt.</string>
    
    <string name="offer_detail_stores">Ihned k vyzvednutí:</string>
    <string name="offer_detail_payments">Platba:</string>
    <string name="offer_detail_depots">Výdejní místa:</string>
    <string name="offer_detail_blank">Není vybrána žádná provozovna.</string>
    
    <string-array name="product_limit_array">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string name="product_limit_label">Počet položek:</string>
    
    <string name="product_criterion_0">Relevance</string>
    <string name="product_criterion_1">Ceny</string>
    <string name="product_criterion_2">Abecedně</string>  
    <string-array name="product_criterion_array">
        <item>@string/product_criterion_0</item>
        <item>@string/product_criterion_1</item>
        <item>@string/product_criterion_2</item>        
    </string-array>
    <string name="product_criterion_label">Řadit podle:</string>
     
    <string name="product_direction_0">Vzestupně</string>
    <string name="product_direction_1">Sestupně</string>
    <string-array name="product_direction_array">
        <item>@string/product_direction_0</item>
        <item>@string/product_direction_1</item>               
    </string-array>
    <string name="product_direction_label">Směr řazení:</string>
    
    <string name="product_price_label">Cena:</string> 
    <string name="product_price">Bez omezení</string>  
    <string name="product_price_from">Od:</string>
    <string name="product_price_to">Do:</string>
    
    <string name="delete_history">Smazat historii hledání</string>
    
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    <string name="filter_set">Nastavit filtry</string>
    
    <string-array name="offer_limit_array">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string name="offer_limit_label">Počet položek:</string>
    <string name="offer_at_store_label">Pouze skladem</string>
    
	<string name="offer_direction_0">Od nejlevnějšího</string>
    <string name="offer_direction_1">Od nejdražšího</string>
    <string-array name="offer_direction_array">
        <item>@string/offer_direction_0</item>
        <item>@string/offer_direction_1</item>               
    </string-array>
    <string name="offer_direction_label">Směr řazení:</string>
    
    <string name="no_result_text">Na dotaz \"%1$s\" jsme nenalezli žádnou nabídku.</string>
    
</resources>