<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/action_filter_set"
    	android:title="@string/filter_set"
    	android:icon="@android:drawable/ic_menu_preferences"
    	android:showAsAction="ifRoom|collapseActionView"    	
    />
    
    <item android:id="@+id/action_sort"
    	android:title="@string/sort_up"
    	android:icon="@drawable/ic_menu_sort_by_size_up"
    	android:showAsAction="ifRoom|collapseActionView"
    />
    
    <item android:id="@+id/action_search"
          android:title="@string/search_label"
          android:icon="@android:drawable/ic_menu_search"
          android:showAsAction="ifRoom|collapseActionView"          
          android:actionViewClass="android.widget.SearchView"          
 	/>    

</menu>