<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200pt"
    android:orientation="vertical" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="1" >
    
     	<TextView
	        android:id="@+id/productLimit_label"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/product_limit_label"
	        android:layout_weight="1" 
	        android:gravity="center"/>
     	        
	    <Spinner
	        android:id="@+id/productLimit"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="2"
	        android:gravity="center"
	        />
	    
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal" 
    android:layout_weight="1">
    
     	<TextView
	        android:id="@+id/productCriterion_label"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/product_criterion_label"
	        android:layout_weight="1" 
	        android:gravity="center"/>
        
	    <Spinner
	        android:id="@+id/productCriterion"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="2"
	        android:gravity="center"
	        />
	    
    </LinearLayout>   
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal" 
    android:layout_weight="1">
    
     	<TextView
	        android:id="@+id/productDirection_label"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/product_direction_label"
	        android:layout_weight="1" 
	        android:gravity="center"/>
        
	    <Spinner
	        android:id="@+id/productDirection"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="2"
	        android:gravity="center"
	        />
	    
    </LinearLayout>  
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal" 
    android:layout_weight="1">
    
     	<TextView
	        android:id="@+id/productPrice_label"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/product_price_label" 
	        android:layout_weight="1"
	        android:gravity="center"/>
        
	    <CheckBox
     	    android:id="@+id/productPrice"
     	    android:layout_width="0dp"
     	    android:layout_height="match_parent"
     	    android:text="@string/product_price" 
     	    android:layout_weight="2"
     	    android:gravity="center_vertical|left"/>
	    
    </LinearLayout>
    
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal" 
    android:layout_weight="1"
    android:id="@+id/productPrice_from_container">
    
           	<TextView
	        android:id="@+id/productPrice_from_label"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/product_price_from" 
	        android:layout_weight="1"
	        android:gravity="center"/> 
	        
        	<EditText
     	    android:id="@+id/productPrice_from"
     	    android:layout_width="0dp"
     	    android:layout_height="match_parent"
     	    android:layout_weight="2"
     	    android:inputType="number"
     	    android:ems="10" 
     	    android:gravity="center"     	    />
        	        	
    
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal" 
    android:layout_weight="1"
    android:id="@+id/productPrice_to_container">
    
           	<TextView
	        android:id="@+id/productPrice_to_label"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/product_price_to" 
	        android:layout_weight="1"
	        android:gravity="center"/> 
	        
        	<EditText
     	    android:id="@+id/productPrice_to"
     	    android:layout_width="0dp"
     	    android:layout_height="match_parent"
     	    android:layout_weight="2"
     	    android:inputType="number"
     	    android:ems="10" 
     	    android:gravity="center"/>
        	        	
    
    </LinearLayout>   
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal" 
    android:layout_weight="1"
    android:id="@+id/deleteSearchHistory_container">
      
      <Button
        android:id="@+id/deleteHistoryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
           android:text="@string/delete_history" 
   		/>    
        
    </LinearLayout>

</LinearLayout>